syntax = "proto3";

package auth;

option go_package = "./services/api_gateway/pkg/auth/pb";

message RegisterRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ValidateRequest { 
  string token = 1; 
}

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

message ForgotPasswordReq {
  string email = 1;
}

message ForgotPasswordRes {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ResetPasswordReq {
  string email = 1;
  string token = 3;
}

message ResetPasswordRes {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc ForgotPassword(ForgotPasswordReq) returns (ForgotPasswordRes) {}
  rpc ResetPassword(ResetPasswordReq) returns (ResetPasswordRes) {}
}